<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <properties>
        <stratio-test-bdd.version>0.2.0-SNAPSHOT</stratio-test-bdd.version>
        <crossdata.version>1.0.0-SNAPSHOT</crossdata.version>
        <assertj-core.version>1.7.0</assertj-core.version>
    </properties>
    <groupId>com.stratio.crossdata</groupId>
    <artifactId>tests</artifactId>
    <version>0.1.0-SNAPSHOT</version>

    <build>
        <plugins>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>**/scripts/CassandraScript.cql</exclude>
                        <exclude>**/aop.xml</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.17</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.17</version>
                <executions>
                    <execution>
                        <id>acceptance-test</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>suite.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <properties>
                        <property>
                            <name>usedefaultlisteners</name>
                            <value>false</value>
                        </property>
                        <property>
                            <name>listener</name>
                            <value>com.stratio.tests.utils.JaCoCoClient</value>
                        </property>
                    </properties>
                    <argLine>-Xmx2048m -XX:MaxPermSize=128m -XX:+HeapDumpOnOutOfMemoryError
                        -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.8.2/aspectjweaver-1.8.2.jar</argLine>
                    <!-- <useSystemClassloader>true</useSystemClassloader> -->
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-1.2-api</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>com.stratio.qa</groupId>
            <artifactId>bdt-lib</artifactId>
            <version>${stratio-test-bdd.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.datastax.cassandra</groupId>
                    <artifactId>cassandra-driver-core</artifactId>
                </exclusion>
                <exclusion>
                	<artifactId>guava</artifactId>
                	<groupId>com.google.guava</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.stratio.crossdata</groupId>
            <artifactId>crossdata-core</artifactId>
            <version>${crossdata.version}</version>
        </dependency>
        <dependency>
            <groupId>com.stratio.crossdata</groupId>
            <artifactId>crossdata-common</artifactId>
            <version>${crossdata.version}</version>
        </dependency>
        <dependency>
            <groupId>com.stratio.crossdata.connector</groupId>
            <artifactId>crossdata-cassandra</artifactId>
            <version>${crossdata.version}</version>
        </dependency>
            <dependency>
            <groupId>com.stratio.crossdata.connector</groupId>
            <artifactId>crossdata-elasticsearch</artifactId>
            <version>${crossdata.version}</version>
        </dependency>
        <dependency>
            <groupId>com.stratio.crossdata</groupId>
            <artifactId>crossdata-driver</artifactId>
            <version>${crossdata.version}</version>
        </dependency>
        <dependency>
            <groupId>com.stratio.crossdata.connector</groupId>
            <artifactId>crossdata-mongodb</artifactId>
            <version>${crossdata.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mariadb.jdbc</groupId>
            <artifactId>mariadb-java-client</artifactId>
            <version>1.1.7</version>
        </dependency>
        <dependency>
            <groupId>org.elasticsearch</groupId>
            <artifactId>elasticsearch</artifactId>
            <version>1.7.1</version>
         </dependency>
        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.json</artifactId>
            <version>1.0.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.9.9</version>
        </dependency>
    </dependencies>
</project>